fix: enable auction house link in footer, possible iPhone white space fix

--- a/src/assets/scss/normalize.scss
+++ b/src/assets/scss/normalize.scss
@@ -234,7 +234,7 @@ html {
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container {
